--- a/ESTIME.RESTfulAPI/appsettings.Development.json
+++ b/ESTIME.RESTfulAPI/appsettings.Development.json
@@ -8,6 +8,7 @@
     }
   },
   "ConnectionStrings": {
-    "EstimeDb": "Server=.\\SQLExpress;Database=EETSD_FTS_D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"EstimeDb": "Server=.\\SQLExpress;Database=EETSD_FTS_D;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "EstimeDb": "Server=localhost;Database=ESTIME_Dev;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
